--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <title>Aidan Clopp</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/x-icon" href="assets/icons/brand.png">
 </head>
 
 <body>
-    <h1>This is a Heading</h1>
-    <p>This is a paragraph.</p>
+    <div class="header">
+        <h1>Header</h1>
+        <p>My supercool header</p>
+    </div>
 </body>
 
 </html>
